--- a/public/page2_qu'est_ce_que_le_but.html
+++ b/public/page2_qu'est_ce_que_le_but.html
@@ -28,7 +28,7 @@
             <!---- Contenu de la page (à changer en fonction de la page) ----> 
 
             <div id = "page_professionnels" > 
-                <p> Vous êtes professionnels, professeurs, conseillés en orientation, une page vous est consacrée : </p> 
+                <p> Vous êtes professionnels, professeurs, parents ou étudiants en reconversion, une page vous est consacrée : </p> 
 
                 <button> <a href = "page7_page_professionnels.html" > Aller sur la page </a> > </button>
             </div> 
