--- a/public/page7_page_professionnels.html
+++ b/public/page7_page_professionnels.html
@@ -29,7 +29,46 @@
             <div id = "contenu_page" class="bordure"> 
                 <h1> Page professionnels </h1> 
             
-                <p> Cette page est consacrée aux professionnels, pour plus cibler vos attentes, et répondre le plus clairement possible à vos demande d'information </p>
+                <p> Cette page est consacrée aux professionnels, professeurs, parents, et étudiants en reconversion, pour plus cibler vos attentes, et répondre le plus clairement possible à vos demande d'information </p> 
+
+                <h2> Professionnels </h2> 
+
+                <p> Vous êtes professionnels ? Vous cherchez des étudiants compétents dans le domaine informatique ? Durant cette crise de l'emploi les qualifiés en informatique sont de plus en plus difficile à trouver. 
+                    Le BUT Informatique est peut-être la solution à votre problème. Les étudiants sont passionnés, perséverrants, et seront compétents à la fin de la formation. 
+                    Durant leur formation, ils apprendront l'informatique mais pas seulement, ils seront formés aussi à l'économie des entreprises, la communication, ou encore l'anglais. 
+                    Ils sauront donc comment fonctionne une entreprises, comment communiquer avec les autres salriés et supérieurs, et communiquer avec des clients étrangers. 
+                    Ce qui n'est pas le cas de toutes les formations. 
+                    Le BUT Informatique, est effectué pendant au moins une année en alternance. Ce qui permet aux entreprises de former des étudiants dans une période assez courte, et de voir s'ils sont compatibles avec l'entreprise 
+                    et dans ce cas les entreprises pourront proposer des emplois aux étudiants. 
+                    Pour cela ils vous suffit de vous rapprocher d'un IUT où la liste se trouve sur la page : liste des IUT. 
+                </p> 
+
+                <h2> Professeurs </h2> 
+
+                <p> Vous êtes professeurs, et vous souhaiter le meilleur pour vos élèves ? Vous avez telement le choix entre toutes ces formations, que vous ne savez pas quoi leurs conseiller. 
+                    Vous ne savez même pas quelles sont les différences entre les différentes formations. Vous pouvez maintenant leurs conseiller 
+                    le BUT Informatique. Cette formation générale est idéale pour des élèves qui ne savent pas encore dans quels domaine de l'informatique 
+                    aller. La formation est professionnalisante. Elle est reconnue par l'Etat. De plus, elle accompagne au plus les étudiants 
+                    pour ne pas créer trop de changements avec le lycée. 
+                </p> 
+
+                <h2> Parents </h2> 
+
+                <p> Vous êtes parents ? Vous voulez le meilleur pour votre enfant ? Le BUT Informatique est une valeur sure. Le diplôme est reconnue par l'Etat. 
+                La formation est professionnalisante et accompagne les étudiants aux mieux. La formation se situe dans un IUT, donc celle-ci est gratuite, il faut juste payer les droits universitaires détaillés sur la page : qu'est ce que le BUT. 
+                Il y a généralement beaucoup de logements universitaires aux abords des IUT. La formation est répartie sur tout le térritoire donc au plus proche de vous. 
+                Avec le BUT Informatique votre enfant sera qualifié et pourra trouver un emploi qui lui plait.    
+                </p>
+
+                <h2> Etudiants en reconversion </h2> 
+
+                <p> Vous êtes étudiants en reconversion ? Vous ne voulez plus vous tromper ? Le BUT Informatique est une formation générale 
+                    qui vous donne accès aux différents domaines de l'informatique. Elle accompagne les étudiants au mieux. Elle se situe dans un IUT 
+                    donc la formation est gratuite, il faut juste payer les droits universitaires qui sont détaillés sur la page : qu'est ce que le BUT. 
+                    La formation est en partie en alternance ce qui vous donnera la possibilité de connaitre au mieux votre futur métier et donc de savoir si vous ne vous êtes pas trompé. 
+                    La formation est reconnue par l'Etat ce qui vous laisse la possibilité de continuer vos études dans différentes écoles. 
+                </p> 
+
             </div> 
 
             <!-------- Bas de page -------->
@@ -43,7 +82,7 @@
                         <li><a href="page5_Liste_des_IUT.html">Liste des IUT</a></li>
                         <li><a href="page6_contact.html">Contact</a></li>
                     </ul>
-                    <p>Réalisation : Nicolas DE SAINT JEAN et Corentin GESSE--ENTRESSANGLE - 2021</p>
+                    <p>Réalisation : Nicolas DE SAINT JEAN et Corentin GESSE--ENTRESSANGLE - 2021</p> 
                 </div>
                 <div id="footer_images">
                     <img src="images/Logo_de_l'Association_des_directeurs_d'IUT.png" alt="logo_IUT">
