--- a/public/page2_qu'est_ce_que_le_but.html
+++ b/public/page2_qu'est_ce_que_le_but.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Qu'est-ce que le BUT ?</title>
@@ -22,6 +23,7 @@
                         <li><a href="page4_A_propos_de_nous.html">A propos de nous</a></li>
                         <li><a href="page5_Liste_des_IUT.html">Liste des IUT</a></li>
                         <li><a href="page6_contact.html">Contact</a></li>
+                        <li><a href="page7_aide.html">Aide</a></li>
                     </ul>
                 </nav>
             </div>
@@ -30,8 +32,10 @@
             <div id = "page_professionnels" > 
                 <p> Vous êtes professionnels, professeurs, parents ou étudiants en reconversion, une page vous est consacrée : </p> 
 
-                <button> <a href = "page7_page_professionnels.html" > Aller sur la page </a> > </button>
-            </div> 
+                <div id="boutton_blanc"> 
+                    <a href = "page7_aide.html" >Aller sur la page</a>
+                </div>
+            </div>
             
             <div id="sommaire" class="bordure">
                 <h1>Sommaire</h1>
@@ -318,6 +322,7 @@
                         <li><a href="page4_A_propos_de_nous.html">A propos de nous</a></li>
                         <li><a href="page5_Liste_des_IUT.html">Liste des IUT</a></li>
                         <li><a href="page6_contact.html">Contact</a></li>
+                        <li><a href="page7_aide.html">Aide</a></li>
                     </ul>
                     <p>Réalisation : Nicolas DE SAINT JEAN et Corentin GESSE--ENTRESSANGLE - 2021</p>
                 </div>
