--- a/public/page4_A_propos_de_nous.html
+++ b/public/page4_A_propos_de_nous.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>A propos de nous</title>
@@ -22,10 +23,18 @@
                         <li><a href="#">A propos de nous</a></li>
                         <li><a href="page5_Liste_des_IUT.html">Liste des IUT</a></li>
                         <li><a href="page6_contact.html">Contact</a></li>
+                        <li><a href="page7_aide.html">Aide</a></li>
                     </ul>
                 </nav>
             </div>
             <!---- Contenu de la page (à changer en fonction de la page) ----> 
+            <div id = "page_professionnels" > 
+                <p> Vous êtes professionnels, professeurs, parents ou étudiants en reconversion, une page vous est consacrée : </p> 
+
+                <div id="boutton_blanc"> 
+                    <a href = "page7_aide.html" >Aller sur la page</a>
+                </div>
+            </div>
 
             <div id="contenu_page" class="bordure">
 
@@ -62,7 +71,7 @@
                         <p>Je suis titulaire d'un baccalauréat technologie STI2D spécialté SIN (Système d'information et numérique), passionné par l'informatique et la culture scientifique depuis plusieurs 
                            années, je voulais m'orienter vers une formation où je pourrais apprendre pleinement les différents domaines de l'informatique et aussi profiter de ma passion. Au début mon choix 
                            était surtout tourné vers un BTS SIO ou SN mais dès que je me suis renseigné sur le BUT, j'ai remarqué que le contenu de la formation était beaucoup plus complet que celui du BTS. 
-                           Donc après réflexion mon choix principal était l'IUT à Villeurbanne, j'ai été admis et j'en suis t'es content aujourdhui.
+                           Donc après réflexion mon choix fut cette formation, j'ai été admis et j'en suis t'es content aujourd'hui.
                         </p>
                     </div>
                 </div>
@@ -105,6 +114,7 @@
                         <li><a href="#">A propos de nous</a></li>
                         <li><a href="page5_Liste_des_IUT.html">Liste des IUT</a></li>
                         <li><a href="page6_contact.html">Contact</a></li>
+                        <li><a href="page7_aide.html">Aide</a></li>
                     </ul>
                     <p>Réalisation : Nicolas DE SAINT JEAN et Corentin GESSE--ENTRESSANGLE - 2021</p>
                 </div>
