--- a/public/page5_Liste_des_IUT.html
+++ b/public/page5_Liste_des_IUT.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Liste des IUT</title>
@@ -22,10 +23,18 @@
                         <li><a href="page4_A_propos_de_nous.html">A propos de nous</a></li>
                         <li><a href="#">Liste des IUT</a></li>
                         <li><a href="page6_contact.html">Contact</a></li>
+                        <li><a href="page7_aide.html">Aide</a></li>
                     </ul>
                 </nav>
             </div>
             <!---- Contenu de la page (à changer en fonction de la page) ---->
+            <div id = "page_professionnels" > 
+                <p> Vous êtes professionnels, professeurs, parents ou étudiants en reconversion, une page vous est consacrée : </p> 
+
+                <div id="boutton_blanc"> 
+                    <a href = "page7_aide.html" >Aller sur la page</a>
+                </div>
+            </div>
             <div id="sommaire" class="bordure">
                 <h1>Sommaire</h1>
                 <ul>
@@ -673,6 +682,7 @@
                         <li><a href="page4_A_propos_de_nous.html">A propos de nous</a></li>
                         <li><a href="#">Liste des IUT</a></li>
                         <li><a href="page6_contact.html">Contact</a></li>
+                        <li><a href="page7_aide.html">Aide</a></li>
                     </ul>
                     <p>Réalisation : Nicolas DE SAINT JEAN et Corentin GESSE--ENTRESSANGLE - 2021</p>
                 </div>
