--- a/public/page6_contact.html
+++ b/public/page6_contact.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Contact</title>
@@ -22,10 +23,19 @@
                         <li><a href="page4_A_propos_de_nous.html">A propos de nous</a></li>
                         <li><a href="page5_Liste_des_IUT.html">Liste des IUT</a></li>
                         <li><a href="#">Contact</a></li>
+                        <li><a href="page7_aide.html">Aide</a></li>
                     </ul>
                 </nav>
             </div>
             <!---- Contenu de la page (à changer en fonction de la page) ----> 
+
+            <div id = "page_professionnels" > 
+                <p> Vous êtes professionnels, professeurs, parents ou étudiants en reconversion, une page vous est consacrée : </p> 
+
+                <div id="boutton_blanc"> 
+                    <a href = "page7_aide.html" >Aller sur la page</a>
+                </div>
+            </div>
 
             <div id="contenu_page" class="bordure"> 
             <h1> Contact </h1>
@@ -102,6 +112,7 @@
                         <li><a href="page4_A_propos_de_nous.html">A propos de nous</a></li>
                         <li><a href="page5_Liste_des_IUT.html">Liste des IUT</a></li>
                         <li><a href="#">Contact</a></li>
+                        <li><a href="page7_aide.html">Aide</a></li>
                     </ul>
                     <p>Réalisation : Nicolas DE SAINT JEAN et Corentin GESSE--ENTRESSANGLE - 2021</p>
                 </div>
