--- a/public/page4_A_propos_de_nous.html
+++ b/public/page4_A_propos_de_nous.html
@@ -36,6 +36,10 @@
                 </div>
             </div>
 
+            <div id="sommaire" class="bordure">
+                <h1>Sommaire</h1>
+            </div>
+
             <div id="contenu_page" class="bordure">
 
                 <h1> A propos de nous </h1>
