--- a/public/page7_aide.html
+++ b/public/page7_aide.html
@@ -28,6 +28,10 @@
                 </nav>
             </div>
             <!---- Contenu de la page (à changer en fonction de la page) ----> 
+            <div id="sommaire" class="bordure">
+                <h1>Sommaire</h1>
+            </div>
+
             <div id = "contenu_page" class="bordure"> 
                 <h1> Page professionnels </h1> 
             
