--- a/public/page1_accueil.html
+++ b/public/page1_accueil.html
@@ -34,7 +34,12 @@
                 <div id="boutton_blanc"> 
                     <a href = "page7_aide.html" >Aller sur la page</a>
                 </div>
-            </div> 
+            </div>
+
+            <div id="sommaire" class="bordure">
+                <h1>Sommaire</h1>
+            </div>
+            
             <div id="contenu_page" class="bordure">
                 <div id="accueil_contenu">
                     <h1>Bienvenue sur notre site !</h1>
