--- a/public/page3_Temoignages.html
+++ b/public/page3_Temoignages.html
@@ -36,6 +36,10 @@
                     <a href = "page7_aide.html" >Aller sur la page</a>
                 </div>
             </div>
+
+            <div id="sommaire" class="bordure">
+                <h1>Sommaire</h1>
+            </div>
             
             <div id = "contenu_page" class="bordure"> 
                 <h1> Temoignages </h1> 
