--- a/public/page6_contact.html
+++ b/public/page6_contact.html
@@ -37,6 +37,10 @@
                 </div>
             </div>
 
+            <div id="sommaire" class="bordure">
+                <h1>Sommaire</h1>
+            </div>
+
             <div id="contenu_page" class="bordure"> 
             <h1> Contact </h1>
             <div id="formulaire">
