--- a/public/page1_accueil.html
+++ b/public/page1_accueil.html
@@ -39,7 +39,7 @@
             <div id="sommaire" class="bordure">
                 <h1>Sommaire</h1>
             </div>
-            
+
             <div id="contenu_page" class="bordure">
                 <div id="accueil_contenu">
                     <h1>Bienvenue sur notre site !</h1>
@@ -58,6 +58,10 @@
                         
                     </div>
                 </div> 
+            </div>
+
+            <div id="fleche">
+                <a href="#"><img src="images/img_109187.png"></a>
             </div>
             <!-------- Bas de page -------->
             <footer>
