--- a/public/page4_A_propos_de_nous.html
+++ b/public/page4_A_propos_de_nous.html
@@ -108,6 +108,10 @@
 
             </div>
 
+            <div id="fleche">
+                <a href="#"><img src="images/img_109187.png"></a>
+            </div>
+
             <!-------- Bas de page -------->
             <footer>
                 <div id="footer_texte"> 
