--- a/public/page5_Liste_des_IUT.html
+++ b/public/page5_Liste_des_IUT.html
@@ -673,6 +673,11 @@
                     </div>
                 </div>
             </div>
+
+            <div id="fleche">
+                <a href="#"><img src="images/img_109187.png"></a>
+            </div>
+            
             <!-------- Bas de page -------->
             <footer>
                 <div id="footer_texte"> 
