--- a/public/page2_qu'est_ce_que_le_but.html
+++ b/public/page2_qu'est_ce_que_le_but.html
@@ -312,6 +312,10 @@
 
             </div> 
 
+            <div id="fleche">
+                <a href="#"><img src="images/img_109187.png"></a>
+            </div>
+
             <!-------- Bas de page -------->
             <footer>
                 <div id="footer_texte"> 
