--- a/public/page3_Temoignages.html
+++ b/public/page3_Temoignages.html
@@ -40,7 +40,7 @@
             <div id="sommaire" class="bordure">
                 <h1>Sommaire</h1>
             </div>
-            
+
             <div id = "contenu_page" class="bordure"> 
                 <h1> Temoignages </h1> 
             
@@ -178,6 +178,10 @@
                     Votre commentaire sera étudié et sera publié dans les plus brefs délais 
                 </p>
             </div> 
+
+            <div id="fleche">
+                <a href="#"><img src="images/img_109187.png"></a>
+            </div>
 
             <!-------- Bas de page -------->
             <footer>
