--- a/public/page1_accueil.html
+++ b/public/page1_accueil.html
@@ -38,13 +38,19 @@
 
             <div id="sommaire" class="bordure">
                 <h1>Sommaire</h1>
+                <ul>
+                    <li><a href="#titre_1">Bienvenue sur notre site !</a></li>
+                    <ul>
+                        <li><a href="#titre_2">Le BUT Informatique</a></li>
+                    </ul>
+                </ul>
             </div>
 
             <div id="contenu_page" class="bordure">
                 <div id="accueil_contenu">
-                    <h1>Bienvenue sur notre site !</h1>
+                    <h1 id="titre_1">Bienvenue sur notre site !</h1>
                     <div id="article_1">
-                        <h2>Le BUT Informatique : une valeur sure</h2>
+                        <h2 id="titre_2">Le BUT Informatique : une valeur sure</h2>
                         <div class="image">
                             <img src="images/info TP.jpg" alt="">
                             <p>Image provenant de l'IUT de Nantes</p>
