--- a/public/page4_A_propos_de_nous.html
+++ b/public/page4_A_propos_de_nous.html
@@ -38,13 +38,20 @@
 
             <div id="sommaire" class="bordure">
                 <h1>Sommaire</h1>
+                <ul>
+                    <li><a href="#titre_1">A propos de nous</a></li>
+                    <ul>
+                        <li><a href="#titre_2">Qui sommes nous ?</a></li>
+                        <li><a href="#titre_3">Explication du projet</a></li>
+                    </ul>
+                </ul>
             </div>
 
             <div id="contenu_page" class="bordure">
 
-                <h1> A propos de nous </h1>
+                <h1 id="titre_1"> A propos de nous </h1>
 
-                <h2>Qui sommes nous ?</h2>
+                <h2 id="titre_2">Qui sommes nous ?</h2>
 
                 <p> Etudiants en BUT Informatique, nous avons eu comme consigne de réaliser, pour un projet web, un site présentant la formation du BUT Informatique. 
                     Ce projet mène deux matières, le web, et la communication.
@@ -80,7 +87,7 @@
                     </div>
                 </div>
 
-                <h2> Explication du projet </h2> 
+                <h2 id="titre_3"> Explication du projet </h2> 
 
                 <p> 
 
