--- a/public/page6_contact.html
+++ b/public/page6_contact.html
@@ -39,17 +39,23 @@
 
             <div id="sommaire" class="bordure">
                 <h1>Sommaire</h1>
+                <ul>
+                    <li><a href="#titre_1">Contact</a></li>
+                    <ul>
+                        <li><a href="#titre_2">Formulaire de contact</a></li>
+                    </ul>
+                </ul>
             </div>
 
             <div id="contenu_page" class="bordure"> 
-                <h1> Contact </h1>
+                <h1 id="titre_1"> Contact </h1>
                     <div id="formulaire">
                         <section id = "texte" >  
                             <p> Si vous avez des questions, vous pouvez nous contacter à l'aide du formulaire ci-contre </p>
                         </section> 
     
                     <div id = "contact" >  
-                        <h2> Formulaire de contact </h2> 
+                        <h2 id="titre_2"> Formulaire de contact </h2> 
 
                         <form method = "post" action = "mailto:cocogesseentressangle@gmail.com"> 
 
