--- a/public/page7_aide.html
+++ b/public/page7_aide.html
@@ -30,10 +30,18 @@
             <!---- Contenu de la page (à changer en fonction de la page) ----> 
             <div id="sommaire" class="bordure">
                 <h1>Sommaire</h1>
+                <ul>
+                    <li><a href="#titre_1">Aide</a></li>
+                    <ul>
+                        <li><a href="#titre_2">Professeurs</a></li>
+                        <li><a href="#titre_3">Parents</a></li>
+                        <li><a href="#titre_4">Etudiants en reconversion</a></li>
+                    </ul>
+                </ul>
             </div>
 
             <div id = "contenu_page" class="bordure"> 
-                <h1> Page professionnels </h1> 
+                <h1 id="titre_1"> Aide </h1> 
             
                 <p> Cette page est consacrée aux professionnels, professeurs, parents, et étudiants en reconversion, pour plus cibler vos attentes, et répondre le plus clairement possible à vos demande d'information </p> 
 
@@ -49,7 +57,7 @@
                     Pour cela ils vous suffit de vous rapprocher d'un IUT où la liste se trouve sur la page : <a href = "page5_Liste_des_IUT.html" > liste des IUT </a>.  
                 </p> 
 
-                <h2> Professeurs </h2> 
+                <h2 id="titre_2"> Professeurs </h2> 
 
                 <p> Vous êtes professeurs, et vous souhaiter le meilleur pour vos élèves ? Vous avez telement le choix entre toutes ces formations, que vous ne savez pas quoi leurs conseiller. 
                     Vous ne savez même pas quelles sont les différences entre les différentes formations. Vous pouvez maintenant leurs conseiller 
@@ -58,7 +66,7 @@
                     pour ne pas créer trop de changements avec le lycée. 
                 </p> 
 
-                <h2> Parents </h2> 
+                <h2 id="titre_3"> Parents </h2> 
 
                 <p> Vous êtes parents ? Vous voulez le meilleur pour votre enfant ? Le BUT Informatique est une valeur sure. Le diplôme est reconnue par l'Etat. 
                 La formation est professionnalisante et accompagne les étudiants aux mieux. La formation se situe dans un IUT, donc celle-ci est gratuite, il faut juste payer les droits universitaires détaillés sur la page : <a href = "page3_Qu'est_ce_que_le_but" > qu'est ce que le BUT </a>.  
@@ -66,7 +74,7 @@
                 Avec le BUT Informatique votre enfant sera qualifié et pourra trouver un emploi qui lui plait.    
                 </p>
 
-                <h2> Etudiants en reconversion </h2> 
+                <h2 id="titre_4"> Etudiants en reconversion </h2> 
 
                 <p> Vous êtes étudiants en reconversion ? Vous ne voulez plus vous tromper ? Le BUT Informatique est une formation générale 
                     qui vous donne accès aux différents domaines de l'informatique. Elle accompagne les étudiants au mieux. Elle se situe dans un IUT 
