--- a/public/page3_Temoignages.html
+++ b/public/page3_Temoignages.html
@@ -39,10 +39,16 @@
 
             <div id="sommaire" class="bordure">
                 <h1>Sommaire</h1>
+                <ul>
+                    <li><a href="#titre_1">Temoignages</li>
+                    <ul>
+                        <li><a href="#titre_2">Formulaire pour laisser un commentaire</a></li>
+                    </ul>
+                </ul>
             </div>
 
             <div id = "contenu_page" class="bordure"> 
-                <h1> Temoignages </h1> 
+                <h1 id="titre_1"> Temoignages </h1> 
             
                 <p> Voici quelques témoignages d'étudiants de différents IUT. Les notes sont notés sur 5. </p>  
                 <div id = "personne1" > 
@@ -104,10 +110,11 @@
                 <p> 
                     Vous pouvez aussi laisser votre commentaire si vous êtes étudiants en BUT Informatique à l'aide du formulaire 
                     ci-dessous 
-                </p> 
+                </p>
+                
+                <h2 id="titre_2"> Formulaire pour laisser un commentaire  </h2> 
 
                 <div id = "contact" >  
-                    <h2> Formulaire pour laisser un commentaire  </h2> 
 
                     <form method = "post" action = "mailto:cocogesseentressangle@gmail.com"> 
 
