--- a/public/page5_Liste_des_IUT.html
+++ b/public/page5_Liste_des_IUT.html
@@ -90,6 +90,10 @@
                 <div id="liste_sites_iut">
                     <div id="no1">
                         <h2>IUT Lyon 1</h2>
+                        <div id="iut_images">
+                            <img src="images/iut lyon 1 site villeurbanne doua.jpg" alt="iut_lyon1_site_villeurbanne_doua">
+                            <img src="images/iut lyon 1 site bourg en bresse.jpg" alt="iut_lyon1_site_bourg-en-bresse">
+                        </div>
                         <div id="square">
                             <p>Site Villeurbanne Doua (Villeurbanne - 69)</p>
                             <div id="desc">
@@ -112,6 +116,9 @@
                     </div>
                     <div id="no2">
                         <h2>IUT de Valence</h2>
+                        <div id="iut_images">
+                            <img src="images/iut de valence.jpg" alt="iut_de_valence">
+                        </div>
                         <div id="square">
                             <p>Site principal (Valence - 26)</p>
                             <div id="desc">
@@ -125,6 +132,9 @@
                     </div>
                     <div id="no3">
                         <h2>IUT 2 de Grenoble</h2>
+                        <div id="iut_images">
+                            <img src="images/iut 2 de grenoble.jpg" alt="iut_2_de_grenoble">
+                        </div>
                         <div id="square">
                             <p>Site principal (Grenoble - 38)</p>
                             <div id="desc">
@@ -138,6 +148,9 @@
                     </div>
                     <div id="no4">
                         <h2>IUT d'Annecy</h2>
+                        <div id="iut_images">
+                            <img src="images/iut d'annecy.jpg" alt="iut_d_annecy">
+                        </div>
                         <div id="square">
                             <p>Site principal (Annecy - 74)</p>
                             <div id="desc">
@@ -151,15 +164,11 @@
                     </div>
                     <div id="no5">
                         <h2>IUT de Nice</h2>
+                        <div id="iut_images">
+                            <img src="images/iut de nice.jpg" alt="iut_de_nice">
+                        </div>
                         <div id="square">
                             <p>Site principal (Nice - 06)</p>
-                            <div id="desc">
-                                <p>Parcours : </p>
-                                <ul>
-                                    <li>Réalisation d'applications : conception, développement, validation</li>
-                                </ul>
-                            </div>
-                            <p>Site Sophia Antipolis (Valbonne - 06)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
                                 <ul>
@@ -170,8 +179,12 @@
                     </div>
                     <div id="no6">
                         <h2>IUT Aix-Marseille</h2>
+                        <div id="iut_images">
+                            <img src="images/iut aix marseille site aix en provence.jpg" alt="iut_aix_marseille_site_aix-en-provence">
+                            <img src="images/iut aix marseille site arles.jpg" alt="iut_aix_marseille_site_arles">
+                        </div>
                         <div id="square">
-                            <p>Site d'Aix-En-Provence (Aix-En-Provence 13)</p>
+                            <p>Site d'Aix-En-Provence (Aix-En-Provence - 13)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
                                 <ul>
@@ -189,18 +202,12 @@
                         </div>
                     </div>
                     <div id="no7">
-                        <h2>IUT de Montpellier</h2>
+                        <h2>IUT de Montpellier-Sète</h2>
+                        <div id="iut_images">
+                            <img src="images/iut de montpellier.jpg" alt="iut_de_montpellier-sète">
+                        </div>
                         <div id="square">
                             <p>Site principal (Montpellier - 34)</p>
-                            <div id="desc">
-                                <p>Parcours : </p>
-                                <ul>
-                                    <li>Réalisation d'applications : conception, développement, validation</li>
-                                    <li>Déploiement d'applications communicantes et sécurisées</li>
-                                    <li>Déploiement, intégration d'applications et management du système d’information</li>
-                                </ul>
-                            </div>
-                            <p>Site de Sète (Sète - 34)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
                                 <ul>
@@ -213,6 +220,9 @@
                     </div>
                     <div id="no8">
                         <h2>IUT de Toulouse</h2>
+                        <div id="iut_images">
+                            <img src="images/iut de toulouse paul sabatier.jpg" alt="iut_de_toulouse">
+                        </div>
                         <div id="square">
                             <p>Site principal (Toulouse - 31)</p>
                             <div id="desc">
