--- a/public/page3_Temoignages.html
+++ b/public/page3_Temoignages.html
@@ -92,9 +92,10 @@
                                     <img src="images/ezgif-6-6841ad3d7920.gif" alt="Corentin GESSE--ENTRESSANGLE">
                                 </div>
                                 <div id="titre">
-                                    <p class="nom"> Nicolas DE SAINT JEAN </p> 
-                                    <p class="etablissement"> Villeurbanne - 07/12/2021 à 17h00 </p> 
+                                        <p class="nom"> Nicolas DE SAINT JEAN </p> 
+                                        <p class="etablissement"> Villeurbanne - 07/12/2021 à 17h00 </p> 
                                 </div>
+                            </div>
                         </div> 
                     
                     
