--- a/public/page2_qu'est_ce_que_le_but.html
+++ b/public/page2_qu'est_ce_que_le_but.html
@@ -113,7 +113,7 @@
 
                 <h3 id="titre_8"> Deroulé général de la formation </h3> 
 
-                <p> Les cours se déoulent en temps pleins dans la première année du BUT Informatique. Dès la deuxième année, les étudiants devront choisir leur parcours (liste disponible sur la page "liste des IUT"). Suivant leur parcours, ils pourront être amenés à travailler en alternance dès la deuxième année. 
+                <p> Les cours se déoulent en temps pleins dans la première année du BUT Informatique. Dès la deuxième année, les étudiants devront choisir leur parcours (liste disponible sur la page <a href = "Liste_des_IUT" > liste des IUT </a>). Suivant leur parcours, ils pourront être amenés à travailler en alternance dès la deuxième année. 
                     Dans le cas contraire ils suivrons un stage au semestre 4 pour appréhender le monde du travail dans l'informatique. 
                     La troisième année du BUT Informatique devra être suivi obligatoirement en alternance.  
                     Voici un tableau récapitulatif du déroulement général de la formation. 
@@ -180,6 +180,7 @@
                 <h2 id="titre_9"> Les activités extra-scolaires </h2>  
 
                 <p> Les activités extra-scolaires sont parfois proposées par les I.U.T. par exemple le sport, la musique, le théâtre … Pour en savoir plus rendez-vous sur la page I.U.T. et allez sur le site de votre I.U.T. 
+                    Ces activités extra-scolaires peuvent aussi rajouter des points dans la notation. Une deuxième langue peut aussi être choisie par l'étudiant, celle-ci rajoute aussi des points dans la notation. 
                 </p> 
 
                 <h2 id="titre_10"> Le diplôme </h2> 
@@ -198,7 +199,11 @@
                     <li> parcours administration, gestion et exploitation des données </li> 
                     <li> parcours déploiement, intégration d'applications et management du système d'information </li> 
                     <li> parcours déploiement d'applications communicantes et sécurisées </li>
-                </ul>
+                </ul> 
+
+                <p> Pour chaque parcours des matières sprécifiques sont enseignées et peuvent avoir une plus ou moins grande quantité de cours généraux commme pour le parcours 
+                    déploiement, intégration d'applications et management du système d'information où les cours de mathématiques sont présents  dans une moins grande quantité que pour les autres parcours. 
+                </p> 
 
                 <h2 id="titre_12"> Débouchés </h2> 
 
@@ -292,7 +297,7 @@
 
                     <tr> 
                         <td> Admissions </td> 
-                        <td> Bac général <div id = "plus" > +++ </div>Bac technologique <div id = "moyen" > ++ </div>Bac professionnel <div id = "peu" > + </div></td> 
+                        <td> Bac général <div id = "plus" > 70% </div>Bac technologique <div id = "moyen" > 29% </div>Bac professionnel <div id = "peu" > 1% </div></td> 
                         <td> Bac général <div id = "plus" > +++ </div>Bac technologique <div id = "moyen" > ++ </div>Bac professionnel <div id = "peu" > + </div></td> 
                         <td> Bac général <div id = "moyen" > ++ </div>Bac technologique <div id = "plus" > +++ </div>Bac professionnel <div id = "peu" > + </div></td> 
                     </tr>
