--- a/public/page5_Liste_des_IUT.html
+++ b/public/page5_Liste_des_IUT.html
@@ -23,7 +23,7 @@
                         <li><a href="page4_A_propos_de_nous.html">A propos de nous</a></li>
                         <li><a href="#">Liste des IUT</a></li>
                         <li><a href="page6_contact.html">Contact</a></li>
-                        <li><a href="page7_aide.html">Aide</a></li>
+                        <li><a href="page7_profils.html">Profils</a></li>
                     </ul>
                 </nav>
             </div>
@@ -799,7 +799,7 @@
                         <li><a href="page4_A_propos_de_nous.html">A propos de nous</a></li>
                         <li><a href="#">Liste des IUT</a></li>
                         <li><a href="page6_contact.html">Contact</a></li>
-                        <li><a href="page7_aide.html">Aide</a></li>
+                        <li><a href="page7_profils.html">Profils</a></li>
                     </ul>
                     <p>Réalisation : Nicolas DE SAINT JEAN et Corentin GESSE--ENTRESSANGLE - 2021</p>
                 </div>
