--- a/public/page1_accueil.html
+++ b/public/page1_accueil.html
@@ -23,7 +23,7 @@
                         <li><a href="page4_A_propos_de_nous.html">A propos de nous</a></li>
                         <li><a href="page5_Liste_des_IUT.html">Liste des IUT</a></li>
                         <li><a href="page6_contact.html">Contact</a></li>
-                        <li><a href="page7_aide.html">Aide</a></li>
+                        <li><a href="page7_profils.html">Profils</a></li>
                     </ul>
                 </nav>
             </div>
@@ -78,7 +78,7 @@
                         <li><a href="page4_A_propos_de_nous.html">A propos de nous</a></li>
                         <li><a href="page5_Liste_des_IUT.html">Liste des IUT</a></li>
                         <li><a href="page6_contact.html">Contact</a></li>
-                        <li><a href="page7_aide.html">Aide</a></li>
+                        <li><a href="page7_profils.html">Profils</a></li>
                     </ul>
                     <p>Réalisation : Nicolas DE SAINT JEAN et Corentin GESSE--ENTRESSANGLE - 2021</p>
                 </div>
