--- a/public/page1_accueil.html
+++ b/public/page1_accueil.html
@@ -41,7 +41,7 @@
                 <ul>
                     <li><a href="#titre_1">Bienvenue sur notre site !</a></li>
                     <ul>
-                        <li><a href="#titre_2">Le BUT Informatique</a></li>
+                        <li><a href="#titre_2">Le BUT Informatique : une valeur sure</a></li>
                     </ul>
                 </ul>
             </div>
@@ -49,19 +49,11 @@
             <div id="contenu_page" class="bordure">
                 <div id="accueil_contenu">
                     <h1 id="titre_1">Bienvenue sur notre site !</h1>
-                    <div id="article_1">
                         <h2 id="titre_2">Le BUT Informatique : une valeur sure</h2>
-                        <div class="image">
-                            <img src="images/info TP.jpg" alt="">
-                            <p>Image provenant de l'IUT de Nantes</p>
-                        </div>
-                        <article>
-                            <p> Ce site aide à informer les étudiants, lycéens, parents, professionnels sur la formation de BUT Informatique. 
+                        <img src="images/info TP.jpg" alt="Image IUT" class="accueil_image">
+                        <p> Ce site aide à informer les étudiants, lycéens, parents, professionnels sur la formation de BUT Informatique. 
                                 Pour cela, ce site contient plusieurs pages, une page de présentation générale, une page de témoignages, une page qui contient la liste des I.U.T proposant cette formation, une page qui nous présente et enfin une page qui permet de nous contacter en cas de besoin. 
-            
-                            </p>
-                        </article> 
-                    </div>
+                        </p>
                 </div> 
             </div>
 
