--- a/public/page2_qu'est_ce_que_le_but.html
+++ b/public/page2_qu'est_ce_que_le_but.html
@@ -185,7 +185,7 @@
 
                 <h2 id="titre_10"> Le diplôme </h2> 
 
-                <p> Le BUT Informatique est un diplôme reconnu par l’Etat. Il correspond à un BAC + 3. Il est de grade de licence. Le diplôme ce veut plus professionnalisant et plus tourné vers l’internationale. 
+                <p> Le BUT Informatique est un diplôme reconnu par l’Etat. Il correspond à un BAC + 3. Il est de grade de licence. Le diplôme ce veut plus professionnalisant et plus tourné vers l’internationale que la license ou encore le BTS.  
                 </p> 
 
                 <h2 id="titre_11"> Les parcours </h2> 
